adds copy, pages

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,13 +1,8 @@
 @tailwind base;
+
+p {
+  @apply mb-4;
+}
+
 @tailwind components;
 @tailwind utilities;
-
-.site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-.site-content {
-  flex-grow: 1;
-}
